SAK-50685 Rubrics concurrent grading duplicate new evaluations
https://sakaiproject.atlassian.net/browse/SAK-50685